charts/templates/pod.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-actix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-actix
  template:
    metadata:
      labels:
        app: otel-actix
    spec:
      containers:
      name: otel-actix
      image: docker.io/library/otel-actix:latest
      imagePullPolicy: Never
      ports:
        - name: otel-actix
          containerPort: 8080
