charts/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: otel-actix-service
spec:
  selector:
    app.kubernetes.io/name: otel-actix
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
